Details
-
Bug
-
Resolution: Fixed
-
Minor
-
September 2016
Description
Currently IcmpSendEcho fails in ReactOS.
The patch fixes all testIcmpSendEcho tests.
Fix the header in iphlpapi for ip.
Add proper checks for parameters.
Break on network error.
Fix buffer size for reading icmp packet.
Now ping in ReactOS should start working.
Attachments
Issue Links
- is blocked by
-
CORE-10440 PATCH: Fix issues of ws2_32_new
-
- Resolved
-
- relates to
-
CORE-10573 Rewrite of ping
-
- Resolved
-